Set background to white to avoid overlap on start

--- a/demo/app.css
+++ b/demo/app.css
@@ -1,5 +1,6 @@
 body {
     font-size: 16px;
+    background: white;
 }
 
 section.log span.error {
